Updated build script

--- a/pom.tmpl
+++ b/pom.tmpl
@@ -28,17 +28,17 @@ For any inquiry or need additional information, please contact support-qaf@infos
 	<groupId>${ivy.pom.groupId}</groupId>
 	<artifactId>${ivy.pom.artifactId}</artifactId>
 	<version>${ivy.pom.version}</version>
-	<name>QMetry Automation Framework</name>
-	<url>https://qmetry.github.io/qaf</url>
-	<description>Functional test automation framework for web, mobile-web, mobile native and web-service</description>
+	<name>QAF-support</name>
+	<url>https://github.com/qmetry/${ivy.pom.artifactId}</url>
+	<description>QAF-support library for UI automation</description>
 	<scm>
-		<connection>scm:git:git://github.com/qmetry/qaf-support.git</connection>
-		<developerConnection>scm:git:git@github.com:qmetry/qaf-support.git</developerConnection>
-		<url>https://github.com/qmetry/qaf-support</url>
+		<connection>scm:git:git://github.com/qmetry/${ivy.pom.artifactId}.git</connection>
+		<developerConnection>scm:git:git@github.com:qmetry/${ivy.pom.artifactId}.git</developerConnection>
+		<url>https://github.com/qmetry/${ivy.pom.artifactId}</url>
 	</scm>
 	<issueManagement>
 		<system>GitHub Issues</system>
-		<url>https://github.com/qmetry/qaf-support/issues</url>
+		<url>https://github.com/qmetry/${ivy.pom.artifactId}/issues</url>
 	</issueManagement>
 	<licenses>
 		<license>
